--- a/MyGrallery/package.json
+++ b/MyGrallery/package.json
@@ -21,8 +21,10 @@
     "fbjs": "^3.0.4",
     "react": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-camera-roll-picker": "^2.0.0",
     "react-native-fast-image": "^8.5.11",
     "react-native-gesture-handler": "^2.4.2",
+    "react-native-image-picker": "^4.8.3",
     "react-native-paper": "^4.12.1",
     "react-native-reanimated": "^2.8.0",
     "react-native-safe-area-context": "^4.2.5",
