--- a/MyGrallery/android/app/build.gradle
+++ b/MyGrallery/android/app/build.gradle
@@ -262,7 +262,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
-
+    
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
 
@@ -285,6 +285,7 @@ dependencies {
         def hermesPath = "../../node_modules/hermes-engine/android/";
         debugImplementation files(hermesPath + "hermes-debug.aar")
         releaseImplementation files(hermesPath + "hermes-release.aar")
+        compile project(':@react-native-community_cameraroll')
     } else {
         implementation jscFlavor
     }
