--- a/MyGrallery/ios/Podfile
+++ b/MyGrallery/ios/Podfile
@@ -31,6 +31,7 @@ target 'MyGrallery' do
   # you should disable the next line.
   use_flipper!()
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+  pod 'rn-fetch-blob', :path => '../node_modules/rn-fetch-blob'
   post_install do |installer|
     react_native_post_install(installer)
     __apply_Xcode_12_5_M1_post_install_workaround(installer)
