--- a/MyGrallery/package.json
+++ b/MyGrallery/package.json
@@ -30,7 +30,9 @@
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "^3.13.1",
     "react-native-swiper": "^1.6.0",
-    "react-native-vector-icons": "^9.1.0"
+    "react-native-vector-icons": "^9.1.0",
+    "react-native-view-shot": "^3.3.0",
+    "rn-fetch-blob": "^0.13.0-beta-1"
   },
   "devDependencies": {
     "@babel/core": "^7.18.2",
