--- a/MyGrallery/ios/Podfile
+++ b/MyGrallery/ios/Podfile
@@ -32,6 +32,8 @@ target 'MyGrallery' do
   use_flipper!()
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
   pod 'rn-fetch-blob', :path => '../node_modules/rn-fetch-blob'
+  pod 'RNConvertPhAsset', :path => '../node_modules/react-native-convert-ph-asset'
+  pod 'RNFS', :path => '../node_modules/react-native-fs'
   post_install do |installer|
     react_native_post_install(installer)
     __apply_Xcode_12_5_M1_post_install_workaround(installer)
