--- a/MyGrallery/package.json
+++ b/MyGrallery/package.json
@@ -22,7 +22,9 @@
     "react": "17.0.2",
     "react-native": "0.68.2",
     "react-native-camera-roll-picker": "^2.0.0",
+    "react-native-convert-ph-asset": "^1.0.3",
     "react-native-fast-image": "^8.5.11",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.4.2",
     "react-native-image-picker": "^4.8.3",
     "react-native-paper": "^4.12.1",
