--- a/MyGrallery/android/build.gradle
+++ b/MyGrallery/android/build.gradle
@@ -47,7 +47,10 @@ allprojects {
                 excludeGroup "com.facebook.react"
             }
         }
+        maven { url 'https://maven.google.com' }
         google()
         maven { url 'https://www.jitpack.io' }
+        mavenLocal()
+        jcenter()
     }
 }
