--- a/MyGrallery/package.json
+++ b/MyGrallery/package.json
@@ -19,15 +19,17 @@
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "fbjs": "^3.0.4",
+    "hoist-non-react-statics": "^3.3.2",
+    "i": "^0.3.7",
+    "npm": "^8.12.1",
     "react": "17.0.2",
     "react-native": "0.68.2",
     "react-native-camera-roll-picker": "^2.0.0",
     "react-native-convert-ph-asset": "^1.0.3",
-    "react-native-fast-image": "^8.5.11",
+    "react-native-fast-image": "^8.3.2",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.4.2",
     "react-native-image-picker": "^4.8.3",
-    "react-native-paper": "^4.12.1",
     "react-native-reanimated": "^2.8.0",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "^3.13.1",
